@@ -21,6 +21,7 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.regex.Pattern;
@@ -318,8 +319,10 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
           .body("$", responseIsError())
           .body("errors", hasSize(1))
           .body("errors[0].errorCode", is("COMMAND_ACCEPTS_NO_OPTIONS"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
-          .body("errors[0].message", startsWith("Command accepts no options: `InsertOneCommand`"));
+          .body("errors[0].exceptionClass", is("RequestException"))
+          .body(
+              "errors[0].message",
+              startsWith("Command 'insertOne' does not accept options but some were included."));
     }
 
     @Test
@@ -400,11 +403,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
                       """)
           .body("$", responseIsError())
           .body("errors[0].errorCode", is("COMMAND_FIELD_INVALID"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
+          .body("errors[0].exceptionClass", is("RequestException"))
           .body(
               "errors[0].message",
               startsWith(
-                  "Request invalid: field 'command.document' value `null` not valid. Problem: must not be null"));
+                  "Command field 'command.document' value `null` not valid: must not be null"));
     }
   }
 
@@ -512,6 +515,7 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
               .response();
       Object insertedIdRaw = response.path("status.insertedIds[0]");
       assertThat(insertedIdRaw).isInstanceOf(Map.class);
+      @SuppressWarnings("unchecked")
       Map<String, Object> insertedId = (Map<String, Object>) insertedIdRaw;
       assertThat(insertedId).hasSize(1);
       assertThat(insertedId).containsKey("$objectId");
@@ -832,13 +836,13 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
       // Create random "words" of 7 characters each, and space
       StringBuilder sb = new StringBuilder(minLen + 8);
       do {
-        sb.append(RandomStringUtils.randomAlphanumeric(7)).append(' ');
+        sb.append(RandomStringUtils.insecure().nextAlphanumeric(7)).append(' ');
       } while (sb.length() < minLen);
       return sb.toString();
     }
 
     @Test
-    public void insertLongButNotTooLongDoc() throws Exception {
+    public void insertLongButNotTooLongDoc() {
       JsonNode bigDoc =
           createBigDoc("bigValidDoc", DocumentLimitsConfig.DEFAULT_MAX_DOCUMENT_SIZE - 20_000);
       _verifyInsert("bigValidDoc", bigDoc);
@@ -857,7 +861,7 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
     }
 
     @Test
-    public void tryInsertTooLongDoc() throws Exception {
+    public void tryInsertTooLongDoc() {
       JsonNode bigDoc =
           createBigDoc("bigValidDoc", DocumentLimitsConfig.DEFAULT_MAX_DOCUMENT_SIZE + 100_000);
 
@@ -1378,7 +1382,7 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
   @Order(9)
   class InsertManyFails {
     @Test
-    public void orderedFailOnDups() {
+    public void orderedFailOnDuplicates() {
       givenHeadersPostJsonThenOk(
               """
               {
@@ -1394,7 +1398,7 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
               }
               """)
           .body("$", responseIsWritePartialSuccess())
-          .body("status.insertedIds", is(Arrays.asList("doc4")))
+          .body("status.insertedIds", is(List.of("doc4")))
           .body("errors", hasSize(1))
           .body("errors[0].errorCode", is("DOCUMENT_ALREADY_EXISTS"))
           .body("errors[0].exceptionClass", is("JsonApiException"))
@@ -1614,11 +1618,11 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
           .body("$", responseIsError())
           .body("errors", hasSize(1))
           .body("errors[0].errorCode", is("COMMAND_FIELD_INVALID"))
-          .body("errors[0].exceptionClass", is("JsonApiException"))
+          .body("errors[0].exceptionClass", is("RequestException"))
           .body(
               "errors[0].message",
-              endsWith(
-                  "not valid. Problem: amount of documents to insert is over the max limit ("
+              containsString(
+                  "not valid: amount of documents to insert is over the max limit ("
                       + docs.size()
                       + " vs "
                       + MAX_DOCS
@@ -1632,13 +1636,13 @@ public class InsertInCollectionIntegrationTest extends AbstractCollectionIntegra
   class Metrics {
     @Test
     public void checkInsertOneMetrics() {
-      InsertInCollectionIntegrationTest.super.checkMetrics("InsertOneCommand");
-      InsertInCollectionIntegrationTest.super.checkDriverMetricsTenantId();
+      checkMetrics("InsertOneCommand");
+      checkDriverMetricsTenantId();
     }
 
     @Test
     public void checkInsertManyMetrics() {
-      InsertInCollectionIntegrationTest.super.checkMetrics("InsertManyCommand");
+      checkMetrics("InsertManyCommand");
     }
   }
 
